add temporary test page for box sort

--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -45,3 +45,20 @@
   .option
     img
       max-width: 181px
+
+.box-sort
+  margin-left: 0
+  opacity: 1
+
+  .dropzone, #drag
+    border: solid 1px #ddd
+    width: 100px
+    height: 100px
+    background: #fff
+  .drophover
+    background: #eee
+  #drag
+    width: 70px
+    height: 70px
+    border-color: #990000
+    background: #ffeeee
