--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -141,4 +141,6 @@
     = javascript_include_tag "application"
     = render 'layouts/app_init'
     = render 'layouts/google_analytics' if Rails.env.production?
+    = yield(:custom_js)
+
 
