--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -1,6 +1,11 @@
 #quiz-controls
   float: left
   margin-right: 40px
+  ul
+    list-style-type: none
+
+  ul li:not(:first-child)
+    margin: 10px 0
   &.stuck-to-top
     position: fixed
     top: 10px
