use semantic_form for now

--- a/app/views/admin/questions/_box_sort_form.html.haml
+++ b/app/views/admin/questions/_box_sort_form.html.haml
@@ -4,15 +4,12 @@
 -#   window.ChefStepsAdmin = window.ChefStepsAdmin || {};
 -#   window.ChefStepsAdmin.quizImageData= JSON.parse('#{j(@quiz_images)}');
 
-#resource-actions.top
-  = link_to 'Finish', manage_questions_admin_quiz_path(@quiz), class: 'admin-button'
+%h2 Box Sort Question for "#{@question.quiz.title}"
 
-%h2 Box Sort Question for "#{@quiz.title}"
+= semantic_form_for [:admin, @question], url: admin_question_path(@question) do |f|
+  = f.inputs name: "Question Details" do
+    = f.semantic_fields_for :contents do |contents|
+      = contents.input :instructions
 
-%form#box-sort-form
-  %label{ for: 'instructions'} Instructions
-  %input#instructions{type: 'text'}
-
-#resource-actions.bottom
-  = link_to 'Finish', manage_questions_admin_quiz_path(@quiz), class: 'admin-button'
-
+  = f.actions do
+    = f.action :submit, label: 'Save Question'
