Checkpoint before switching to lightbox

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -59,3 +59,42 @@ table.ingredients
 
 .cooked-this-count
   margin-top: 15px
+
+#syllabus-flyout
+  position: relative
+  cursor: pointer
+
+#syllabus-body
+  display: none
+  background-color: white
+  border: 2px solid #a9a9a9
+  position: absolute
+  top: 100%
+  left: -40em
+  z-index: 1000
+  width: 80em
+  text-transform: none
+  font-weight: normal
+  padding-bottom: 2em
+
+  h3
+    margin-top: 0
+
+  h4
+    +font-sans-small
+    color:  black
+    text-transform: uppercase
+    font-weight: bold
+
+  .col
+    float: left
+    width: 50%
+    display: inline
+
+    li
+      line-height: 0.6em
+
+
+
+
+
