--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -6,7 +6,7 @@
 
   = render 'activities/breadcrumbs'
 
-  = render 'courses/navigation', model: activity, disqus_id: disqus_id
+  = render 'courses/navigation', model: activity, disqus_id: disqus_id, syllabus_copy: syllabus_copy
 
   .hero-unit.hero-well.noprint
     .container
