--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -13,6 +13,11 @@
               = link_to model.prev do
                 %i.icon-double-chevron-left
                 %span.nav-label &nbsp;Prev
+          %li#syllabus-flyout
+            %a.icon-list-alt.icon-white
+              %span.nav-label Syllabus
+            #syllabus-body
+              = render 'courses/course_breakdown', copy: syllabus_copy
           - if model.next.present?
             %li
               = link_to model.next do
