handle drop re-parenting

--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -52,6 +52,7 @@
 
   .images
     margin-bottom: 25px
+    height: 160px
     [class*='span']
       margin: 0 auto 10px
       float: none
@@ -67,12 +68,7 @@
 
   #sort-image
     z-index: 10
-    img
-      margin-left: 10px
-
-    &.ui-draggable-dragging
-      img
-        opacity: 0.6
+    cursor: pointer
 
   .sort-option
     +border-radius(3px)
