Checkpoint; just need to review code and show to team

--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -7,6 +7,7 @@
           %li.navbar-activity-title
             .navbar-text
               %h4= raw model.title
+
         %ul.nav.nav-anchors.pull-right
           - if model.prev.present?
             %li
@@ -16,8 +17,6 @@
           %li#syllabus-flyout
             %a.icon-list-alt.icon-white
               %span.nav-label Syllabus
-            #syllabus-body
-              = render 'courses/course_breakdown', copy: syllabus_copy
           - if model.next.present?
             %li
               = link_to model.next do
@@ -39,4 +38,9 @@
           %li
             %a.icon-comment{href: '#disqus_thread', data: {'disqus-identifier' => disqus_id}}
               %span.nav-label Comments
+
+
+#syllabus-body
+  #syllabus-body-inner
+    = render 'courses/course_breakdown', copy: syllabus_copy
 
