--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -66,25 +66,29 @@ table.ingredients
 
 #syllabus-body
   display: none
+
+#syllabus-body-inner
   background-color: white
-  border: 2px solid #a9a9a9
-  position: absolute
-  top: 100%
-  left: -40em
-  z-index: 1000
-  width: 80em
   text-transform: none
   font-weight: normal
-  padding-bottom: 2em
+  padding: 0 1em 2em 1em
+  ul
+    list-style-type: none
 
   h3
-    margin-top: 0
+    display: block
+    margin-top: 10px
+    color:  black
+    text-align: center
+    content: "Accelerated Sous Vide Cooking Course"
 
   h4
     +font-sans-small
     color:  black
     text-transform: uppercase
     font-weight: bold
+    margin-top: 10px
+    margin-bottom: 0
 
   .col
     float: left
@@ -92,7 +96,8 @@ table.ingredients
     display: inline
 
     li
-      line-height: 0.6em
+      line-height: 1.3em
+      margin-top: 0
 
 
 
