add radius to option dashed border

--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -78,6 +78,7 @@
     background: $beige
     position: relative
     &:before
+      +border-radius(3px)
       display: none
       content: ""
       border: 2px dashed $grayLight
