--- a/app/views/admin/questions/_box_sort_form.html.haml
+++ b/app/views/admin/questions/_box_sort_form.html.haml
@@ -10,6 +10,10 @@
   = f.inputs name: "Question Details" do
     = f.semantic_fields_for :contents do |contents|
       = contents.input :instructions, input_html: {value: @question.instructions}
+      = f.semantic_fields_for :options do |options|
+        = options.input :option1, input_html: {value: @question.options[0][:text]}
+        = options.input :option2, input_html: {value: @question.options[1][:text]}
+        = options.input :option3, input_html: {value: @question.options[2][:text]}
 
   = f.actions do
     = f.action :submit, label: 'Save Question'
