create image uploader stylesheet

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -23,7 +23,7 @@
 
 $redLight:      #e63742
 @import admin/quiz
-@import admin/quiz_image
+@import admin/image_uploader
 
 body.admin_namespace
   .img-polaroid
