--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -116,18 +116,22 @@
     cursor: pointer
     position: absolute
     &:nth-child(1)
-      top: -15px
-      left: -15px
-      z-index: 1
-    &:nth-child(2)
-      top: -10px
-      left: -10px
-      z-index: 2
-    &:nth-child(3)
-      top: -5px
-      left: -5px
-      z-index: 3
-    &:nth-child(4)
       top: 0
       left: 0
-      z-index: 4
+      z-index: 40
+    &:nth-child(2)
+      top: -5px
+      left: -5px
+      z-index: 30
+    &:nth-child(3)
+      top: -10px
+      left: -10px
+      z-index: 20
+    &:nth-child(4)
+      top: -15px
+      left: -15px
+      z-index: 10
+    &:nth-child(n+5)
+      display: none
+    &.ui-draggable
+      display: block
