--- a/app/views/quizzes/box_sort.html.haml
+++ b/app/views/quizzes/box_sort.html.haml
@@ -2,25 +2,28 @@
   :javascript
     $(document).ready(function() {
       var handleDrop = function(event, ui) {
-        var draggedFromPile = $(ui.draggable).parents().hasClass('background-images');
         $(this).append(ui.draggable);
+        if (draggedFromPile()) {
+          moveImages();
+        }
         $(this).addClass('image-placed');
         $('.sort-option').css({'z-index': 1});
-        if (draggedFromPile) {
-          addNewImageToRear();
-        }
       };
 
       var handleDragStart = function(event, ui) {
-        $('.image-box:last').parent().css({'z-index': 10});
+        $('.image-box.ui-draggable').parent().css({'z-index': 10});
         $('.sort-option').removeClass('image-placed')
       };
 
-      $('.image-box:last').draggable({
+      var draggedFromPile = function() {
+        return $('.image-box.ui-draggable').parents().hasClass('background-images');
+      };
+
+      $('.image-box:first').draggable({
         containment: '.hero-unit',
         revert: 'invalid',
         helper: function() {
-          if($(this).parents().hasClass('background-images')) {
+          if(draggedFromPile()) {
             return $(this).clone();
           } else {
             return $(this);
@@ -38,14 +41,9 @@
         drop: handleDrop
       });
 
-      addNewImageToRear = function() {
-        $('.image-box').animate({left: '+=5', top: '+=5'},{
-          complete: _.once(function() {
-            image = $('<img class="img-polaroid image-box">').hide();
-            $('.background-images').prepend(image);
-            image.fadeIn()
-          })
-        });
+      moveImages = function() {
+        $('.background-images .image-box').css({left: '-=5', top: '-=5'})
+        $('.background-images .image-box').animate({left: '+=5', top: '+=5'})
       };
     });
 
@@ -60,10 +58,16 @@
         .row.images
           .span3
             .background-images
-              = image_tag 'http://lorempixel.com/270/152/food/4', class: 'img-polaroid image-box'
-              = image_tag 'http://lorempixel.com/270/152/food/3', class: 'img-polaroid image-box'
-              = image_tag 'http://lorempixel.com/270/152/food/2', class: 'img-polaroid image-box'
-              = image_tag 'http://lorempixel.com/270/152/food/1', class: 'img-polaroid image-box'
+              = image_tag 'http://lorempixel.com/270/152/food/1/Picture 1', class: 'img-polaroid image-box'
+              = image_tag 'http://lorempixel.com/270/152/food/2/Picture 2', class: 'img-polaroid image-box'
+              = image_tag 'http://lorempixel.com/270/152/food/3/Picture 3', class: 'img-polaroid image-box'
+              = image_tag 'http://lorempixel.com/270/152/food/4/Picture 4', class: 'img-polaroid image-box'
+              = image_tag 'http://lorempixel.com/270/152/food/5/Picture 5', class: 'img-polaroid image-box'
+              = image_tag 'http://lorempixel.com/270/152/food/6/Picture 6', class: 'img-polaroid image-box'
+              = image_tag 'http://lorempixel.com/270/152/food/7/Picture 7', class: 'img-polaroid image-box'
+              = image_tag 'http://lorempixel.com/270/152/food/8/Picture 8', class: 'img-polaroid image-box'
+              = image_tag 'http://lorempixel.com/270/152/food/9/Picture 9', class: 'img-polaroid image-box'
+              = image_tag 'http://lorempixel.com/270/152/food/10/Picture 10', class: 'img-polaroid image-box'
         .row
           .span4.image-caption
             Four loko next level mixtape, aliqua lomo brunch ut direct trade
