--- a/app/views/admin/questions/_box_sort_form.html.haml
+++ b/app/views/admin/questions/_box_sort_form.html.haml
@@ -2,14 +2,10 @@
 
 :javascript
   window.ChefStepsAdmin = window.ChefStepsAdmin || {};
-  window.ChefStepsAdmin.questionImageData = JSON.parse('#{j(@question.images)}');
-  window.ChefStepsAdmin.questionType = JSON.parse('#{j(@question.question_type)}');
+  window.ChefStepsAdmin.questionImageData = JSON.parse('#{j(@question_images)}');
 
 %h2 Box Sort Question for "#{@question.quiz.title}"
 
-#image-uploader
-  %button.admin-button{ data: {behavior: 'filepicker'}} Upload Images for Quiz
-  #image-list
 
 = semantic_form_for [:admin, @question], url: admin_question_path(@question) do |f|
   = f.inputs name: "Question Details" do
@@ -18,4 +14,8 @@
 
   = f.actions do
     = f.action :submit, label: 'Save Question'
+
+#image-uploader
+  #image-list
+    %button.admin-button{ data: {behavior: 'filepicker'}} Upload Images for Quiz
 
