--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -112,6 +112,7 @@
     height: 151px
     cursor: pointer
     position: absolute
+    padding: 6px
 
   .image-pile
     position: relative
@@ -121,6 +122,7 @@
       height: 151px
       cursor: pointer
       position: absolute
+      padding: 6px
       &:nth-child(1)
         top: 0
         left: 0
@@ -139,6 +141,6 @@
         z-index: 10
       &:nth-child(n+5)
         display: none
-      &.ui-draggable
+      &.ui-draggable-dragging
         display: block
         position: relative
