scope drop targets under parent element

--- a/app/views/quizzes/box_sort.html.haml
+++ b/app/views/quizzes/box_sort.html.haml
@@ -1,7 +1,9 @@
 - content_for :custom_js do
   :javascript
     $(document).ready(function() {
-      new ChefSteps.Views.BoxSortImageSet();
+      new ChefSteps.Views.BoxSortImageSet({
+        el: '.box-sort'
+      });
     });
 
 #quiz-container
