--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -56,9 +56,11 @@
     [class*='span']
       margin: 0 auto 10px
       float: none
+      padding-left: 25px
 
   .image-caption
     +font-serif-small
+    text-align: center
     font-weight: bold
     color: $grayDark
     margin: 0 auto 40px
@@ -95,8 +97,8 @@
         top: 22px !important
         bottom: 23px !important
         right: 23px !important
-        width: 80%
-        height: 68%
+        width: 217px
+        height: 115px
 
   label
     font-weight: bold
@@ -109,7 +111,6 @@
 
   img.ui-draggable-dragging
     width: 270px
-    height: 151px
     cursor: pointer
     position: absolute
     padding: 6px
@@ -119,7 +120,6 @@
 
     img
       width: 270px
-      height: 151px
       cursor: pointer
       position: absolute
       padding: 6px
