use explicit height for draggable
With no height, the intersection logic was requiring the image to be
fully overlapping.

--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -108,6 +108,7 @@
 
   img.ui-draggable-dragging
     width: 270px
+    height: 152px
     cursor: pointer
     position: absolute
     padding: 6px
