--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -15,6 +15,8 @@
       &.image-placed img
         width: 166px
         height: 95px
+    img.ui-draggable-dragging
+      height: 124px
 
 /* Portrait tablet*/
 @media (max-width: 980px)
@@ -63,6 +65,8 @@
       &.image-placed img
         width: 112px
         height: 75px
+    img.ui-draggable-dragging
+      height: 96px
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
