--- a/app/views/admin/questions/_box_sort_form.html.haml
+++ b/app/views/admin/questions/_box_sort_form.html.haml
@@ -17,5 +17,8 @@
 
 #image-uploader
   #image-list
-    %button.admin-button{ data: {behavior: 'filepicker'}} Upload Images for Quiz
+    .image.image-placeholder{ data: {behavior: 'filepicker'}}
+      %p.img-polaroid
+        %i.icon-plus
+        %span Upload Images
 
