a few style tweeks

--- a/app/assets/stylesheets/admin/_image_uploader.css.sass
+++ b/app/assets/stylesheets/admin/_image_uploader.css.sass
@@ -46,13 +46,14 @@
 
   .image-controls
     position: absolute
-    right: 15px
-    top: 18px
+    right: 20px
+    top: 20px
     background: whitesmoke
     padding: 5px
     display: none
     [class*=icon-]
       font-size: 22px
+      line-height: 0.2em
       color: $gray
       cursor: pointer
     .delete-image
