style caption box

--- a/app/assets/stylesheets/admin/_image_uploader.css.sass
+++ b/app/assets/stylesheets/admin/_image_uploader.css.sass
@@ -36,10 +36,7 @@
       clear: left
     .caption
       float: left
-      width: $imageWidth - 25px
-    .edit
-      float: right
-      font-size: 24px
+      width: 100%
     &:hover
       .image-controls
         display: block
