style tweak to ensure dials vertically centered

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -43,6 +43,7 @@
   #quiz-container
     .hero-unit .dials
       margin-top: 0
+      margin-bottom: 0
 
     .dial-left, .dial-right
       float: none
