--- a/app/assets/stylesheets/admin/_image_uploader.css.sass
+++ b/app/assets/stylesheets/admin/_image_uploader.css.sass
@@ -78,7 +78,7 @@
   height: 210px
   .image-controls
     float: left
-    margin-left: 240px
+    margin-left: 20%
     width: 320px
     img
       width: 300px
