add save and keypress events for saving

--- a/app/assets/stylesheets/admin/_image_uploader.css.sass
+++ b/app/assets/stylesheets/admin/_image_uploader.css.sass
@@ -55,11 +55,20 @@
         position: absolute
         bottom: 10px
         left: -10px
-        width: $imageWidth + 40px
+        width: $imageWidth + 26px
+        padding-right: 26px
       button
         margin-top: 10px
         float: right
         clear: left
+    .save
+      position: absolute
+      bottom: 14px
+      right: -5px
+      font-size: 18px
+      cursor: pointer
+      &:hover
+        color: $green
 
   .image-controls
     position: absolute
