--- a/app/assets/stylesheets/admin/_image_uploader.css.sass
+++ b/app/assets/stylesheets/admin/_image_uploader.css.sass
@@ -39,11 +39,19 @@
       font-size: 14px
       clear: left
       padding: 5px
-      cursor: text
+      cursor: pointer
       text-overflow: ellipsis
       white-space: nowrap
       &:hover
         background: $white
+        &:after
+          color: $green
+      &:after
+        position: absolute
+        right: 20px
+        font-family: FontAwesome
+        content: '\f044'
+        font-size: 18px
       i
         font-size: 14px
         color: $grayLight
@@ -61,14 +69,6 @@
         margin-top: 10px
         float: right
         clear: left
-    .save
-      position: absolute
-      bottom: 14px
-      right: -5px
-      font-size: 18px
-      cursor: pointer
-      &:hover
-        color: $green
 
   .image-controls
     position: absolute
